<resources>
    <string name="app_name">Specture</string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="check">확인</string>
    <string name="next">다음</string>
    <string name="apply">수강신청</string>
    <string name="auto_login">자동 로그인</string>
    <string name="recruiting_class">모집 중</string>
    <string name="progressing_class">진행 중</string>
    <string name="ended_class">종료 된 강의</string>
    <string name="content">내용</string>
    <string name="title">제목</string>
    <string name="no_lecture">강의가 없어요.</string>
    <string name="name">이름</string>
    <string name="password_chk">비밀번호 확인</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="introduce">한줄 소개</string>
    <string name="start_to_end_date">강의 기간</string>
    <string name="proposal_end_date">신청 종료일</string>
    <string name="field">나의 분야</string>
    <string name="lecture_field">강의 분야</string>
    <string name="please_set_start_to_end_date">강의 기간을 선택해 주세요.</string>
    <string name="please_set_proposal_end_date">신청 종료일자를 선택해 주세요.</string>
    <string name="dont_you_have_an_account">계정이 없으신가요?</string>
    <string name="school_grade_class_number">%d학년 %d반 %d번</string>
</resources>