<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="kr.hs.dgsw.hackathon2021.ui.view.fragment.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="80dp"
        android:paddingHorizontal="40dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_logo_login"
            android:layout_width="0dp"
            android:layout_height="130dp"
            app:layout_constraintBottom_toTopOf="@id/tv_signUp_signUpInfo"
            android:src="@drawable/ic_white_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_signUp_signUpInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toTopOf="@id/linearLayout1"
            style="@style/BoldTextView"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/iv_logo_login"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearLayout1"
            app:layout_constraintBottom_toTopOf="@+id/btn_next_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_signUp_signUpInfo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/et_id_sign_up"
                app:layout_constraintTop_toBottomOf="@id/et_password_sign_up"
                tools:layout_editor_absoluteX="40dp">

                <Spinner
                    android:id="@+id/spinner_grade_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/spinner_class_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Spinner
                    android:id="@+id/spinner_number_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/et_name_sign_up"
                    style="@style/RegularTextView_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_baseline_user"
                    android:drawablePadding="10dp"
                    android:paddingBottom="15dp"
                    android:hint="@string/name"
                    app:layout_constraintBottom_toTopOf="@+id/btn_next_sign_up" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_username_sign_up"
                    style="@style/RegularTextView_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_id_card"
                    android:drawablePadding="10dp"
                    android:paddingBottom="15dp"
                    android:hint="@string/id" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_password_sign_up"
                    style="@style/RegularTextView_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_padlock"
                    android:drawablePadding="10dp"
                    android:paddingBottom="15dp"
                    android:inputType="textPassword"
                    android:hint="@string/password" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_password_re_sign_up"
                    style="@style/RegularTextView_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_padlock"
                    android:drawablePadding="10dp"
                    android:paddingBottom="15dp"
                    app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
                    app:layout_constraintTop_toBottomOf="@+id/et_name_sign_up"
                    android:inputType="textPassword"
                    android:hint="@string/password_chk" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next_sign_up"
            style="@style/RegularTextView_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:background="@drawable/round_button_main"
            android:text="@string/check"
            app:layout_constraintTop_toBottomOf="@id/linearLayout1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>