<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp"
                tools:context=".ui.view.fragment.AddLectureFragment">

                <EditText
                    android:id="@+id/et_title_add_lecture"
                    style="@style/RegularTextView_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_title_add_lecture" />

                <EditText
                    android:id="@+id/et_field_add_lecture"
                    style="@style/RegularTextView_black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="주제"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_title_add_lecture" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_image_add_lecture"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/fab_addImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:clickable="true"
                        android:src="@drawable/ic_photo_camera"
                        app:layout_constraintBottom_toBottomOf="@+id/rv_image_add_lecture"
                        app:layout_constraintEnd_toEndOf="@+id/rv_image_add_lecture" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/textView_asdf"
                    style="@style/BoldTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="신청 종료일"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_image_add_lecture" />

                <DatePicker
                    android:id="@+id/proposal_date"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_marginTop="10dp"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />


                <TextView
                    android:id="@+id/textView"
                    style="@style/BoldTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/start_date"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_image_add_lecture" />

                <DatePicker
                    android:id="@+id/start_date"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_marginTop="10dp"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView_end"
                    style="@style/BoldTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="강의 종료일"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_image_add_lecture" />

                <DatePicker
                    android:id="@+id/end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="120dp"
                    android:layout_marginTop="10dp"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <EditText
                    android:id="@+id/et_content_add_lecture"
                    style="@style/RegularTextView_black"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:gravity="top"
                    android:hint="@string/content"
                    android:inputType="textPersonName"
                    app:layout_constraintBottom_toTopOf="@+id/btn_submit_add_lecture"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_submit_add_lecture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button_main"
            android:text="@string/check"
            android:layout_margin="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>